--- a/app/src/main/res/layout/main_fagment.xml
+++ b/app/src/main/res/layout/main_fagment.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
+              android:padding="5dp"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <ImageView
-        android:layout_centerInParent="true"
-        android:id="@+id/iv"
-        android:layout_width="200dp"
-        android:layout_height="200dp"/>
+    <GridView
+        android:stretchMode="columnWidth"
+        android:numColumns="3"
+        android:listSelector="@android:color/transparent"
+        android:verticalSpacing="5dp"
+        android:horizontalSpacing="5dp"
+        android:gravity="center"
+        android:id="@+id/grid_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </GridView>
 
 </LinearLayout>
